--- a/package.json
+++ b/package.json
@@ -8,15 +8,20 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Brad Traversy",
   "license": "MIT",
   "devDependencies": {
-    "nodemon": "^1.14.6"
+    "nodemon": "^1.19.2"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "concurrently": "^3.5.1",
-    "express": "^4.16.2"
+    "cors": "^2.8.5",
+    "express": "^4.16.2",
+    "mongoose": "^5.6.13",
+    "morgan": "^1.9.1"
   }
 }
